[gd_scene load_steps=11 format=2]

[ext_resource path="res://image/switch.png" type="Texture" id=1]
[ext_resource path="res://image/on_switch.png" type="Texture" id=2]
[ext_resource path="res://image/target_switch.png" type="Texture" id=3]
[ext_resource path="res://image/stop_lamp.png" type="Texture" id=4]
[ext_resource path="res://image/atach.png" type="Texture" id=5]
[ext_resource path="res://image/move_lamp.png" type="Texture" id=6]
[ext_resource path="res://image/target_right_lamp.png" type="Texture" id=7]
[ext_resource path="res://script/TargetBlock.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 20.0331, 4.91822 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 30.3823, 18.4266 )

[node name="TargetBlock" type="Area2D"]
position = Vector2( 366, 373 )
collision_layer = 3
collision_mask = 3
script = ExtResource( 8 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 5.96046e-08, -30.5146 )
scale = Vector2( 1, 0.720001 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.132307, 25.0751 )
shape = SubResource( 12 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 2
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
hframes = 2

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -0.0231547, -0.519022 )
scale = Vector2( 1.59993, 0.749999 )
texture = ExtResource( 2 )
energy = 2.01
range_item_cull_mask = 2

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 13 )

[node name="Switch" type="Sprite" parent="."]
modulate = Color( 0.690196, 0.690196, 0.690196, 1 )
position = Vector2( -1.13231, -81 )
scale = Vector2( 1.97778, 1.06667 )
texture = ExtResource( 3 )

[node name="RedLight" type="Light2D" parent="Switch"]
position = Vector2( 0.505619, 17 )
scale = Vector2( 0.943819, 0.48 )
texture = ExtResource( 4 )
color = Color( 1, 0, 0, 1 )
energy = 1.57

[node name="GreenLight" type="Light2D" parent="Switch"]
position = Vector2( 0.505619, -10 )
scale = Vector2( 0.943819, 0.48 )
texture = ExtResource( 6 )
color = Color( 0.0588235, 1, 0.141176, 1 )
energy = 2.56

[node name="Icon" type="Sprite" parent="."]
modulate = Color( 0.623529, 0.623529, 0.623529, 1 )
position = Vector2( -1.13231, -172 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="Light2D" type="Light2D" parent="Icon"]
texture = ExtResource( 7 )
energy = 1.2

[connection signal="body_entered" from="." to="." method="_on_TargetBlock_body_entered"]
